fix card spacing

--- a/src/Pages/Page_01/Main.css
+++ b/src/Pages/Page_01/Main.css
@@ -70,6 +70,11 @@
   * {
     overflow-x: visible;
   }
+  .cards {
+    padding: 70px 0;
+    position: relative;
+    z-index: 2;
+  }
   .contents {
     padding: 0px 16px;
     width: 100%;
